--- a/app/src/main/res/layout/activity_club_review_edit.xml
+++ b/app/src/main/res/layout/activity_club_review_edit.xml
@@ -55,8 +55,8 @@
             <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:orientation="vertical">
-
+                    android:orientation="vertical"
+                    android:layout_weight="1">
                 <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
