--- a/app/src/main/res/layout/item_review.xml
+++ b/app/src/main/res/layout/item_review.xml
@@ -149,8 +149,7 @@
                 <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        tools:text="후기 23개"
-                        reviewCount="@{clubInfo.scoreNum}"
+                        android:text="더보기"
                         android:textColor="@color/ssgsag"
                         android:fontFamily="@font/noto_sans_kr_regular"
                         android:textSize="10sp"
