롤링배너 제작

--- a/app/src/main/res/layout/fragment_review_main.xml
+++ b/app/src/main/res/layout/fragment_review_main.xml
@@ -49,15 +49,18 @@
                             app:layout_constraintEnd_toEndOf="parent"/>
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
-
-                <ImageView
-                        android:id="@+id/frag_review_main_iv_banner"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:src="@drawable/img_starbucks"
-                        android:adjustViewBounds="true"
+                <androidx.constraintlayout.widget.ConstraintLayout
+                        android:id="@+id/frag_review_main_cl_banner"
+                        android:layout_width="wrap_content"
+                        android:layout_height="180dp"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/frag_review_main_cl_toolbar"/>
+                        app:layout_constraintTop_toBottomOf="@+id/frag_review_main_cl_toolbar">
+                    <pl.pzienowicz.autoscrollviewpager.AutoScrollViewPager
+                            android:id="@+id/frag_review_main_asvp_banner"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent" />
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
 
                 <TextView
                         android:layout_width="wrap_content"
@@ -70,7 +73,7 @@
                         android:textSize="20sp"
                         android:visibility="visible"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@id/frag_review_main_iv_banner"
+                        app:layout_constraintTop_toBottomOf="@id/frag_review_main_cl_banner"
                         app:layout_constraintBottom_toTopOf="@+id/frag_review_main_ll_btns"/>
 
                 <LinearLayout
