--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -123,7 +123,7 @@
 
                                 <ImageView
                                         android:id="@+id/act_signup_iv_male"
-                                        android:layout_width="17dp"
+                                        android:layout_width="wrap_content"
                                         android:layout_height="17dp"
                                         android:src="@drawable/select_all" />
 
