--- a/app/src/main/res/layout/fragment_review_grade_inform.xml
+++ b/app/src/main/res/layout/fragment_review_grade_inform.xml
@@ -30,7 +30,7 @@
             android:fontFamily="@font/noto_sans_kr_regular"
             android:textSize="12sp"
             android:textColor="@color/grey_1"
-            android:text="슥삭의 후기 점수는 유저들이 직접 작성, 입력한 평가에 근거하여 5단계 등급으로 나누어 집니다."
+            android:text="슥삭의 후기 점수는 유저들이 직접 작성, 입력한 평가에 근거하여 5가지 범주에 따라 매겨집니다."
             android:layout_marginTop="5dp"
             android:layout_marginHorizontal="16dp"/>
 
