--- a/app/src/main/res/layout/item_review_category.xml
+++ b/app/src/main/res/layout/item_review_category.xml
@@ -13,6 +13,7 @@
         android:orientation="vertical"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        llVisibilityByString="@{reviewCategory}"
         android:layout_marginRight="4dp">
     <androidx.cardview.widget.CardView
             android:layout_width="wrap_content"
