calendarPageAdpater 제작, calendarPageFragment 제작 중

--- a/app/src/main/res/layout/item_all_posters_card.xml
+++ b/app/src/main/res/layout/item_all_posters_card.xml
@@ -31,8 +31,9 @@
                        android:layout_height="match_parent"
                        android:adjustViewBounds="true"
                        android:scaleType="centerCrop"
-                       app:glideImg="@{poster.thumbPhotoUrl}"
-                       tools:src="@drawable/img_poster" />
+                       app:allPosterCardGlideImg="@{poster.thumbPhotoUrl}"
+                       tools:src="@drawable/img_poster"
+                       />
            </androidx.cardview.widget.CardView>
 
            <androidx.cardview.widget.CardView
