--- a/app/src/main/res/layout/fragment_all_poster.xml
+++ b/app/src/main/res/layout/fragment_all_poster.xml
@@ -13,7 +13,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/white"
-            android:layout_marginBottom="@dimen/main_navi_height">
+            android:paddingBottom="@dimen/main_navi_height">
         <androidx.core.widget.NestedScrollView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
