--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -38,10 +38,13 @@
                     android:layout_width="wrap_content"
                     android:layout_height="@dimen/main_navi_height"
                     app:tabIndicator="@null"
+                    app:tabGravity="center"
+                    app:tabMode="fixed"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"/>
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    style="@style/Base.Widget.Design.TabLayout"/>
 
             <ImageView
                     android:id="@+id/frag_main_iv_filter"
@@ -70,11 +73,6 @@
                 android:id="@+id/frag_main_vp"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"/>
-
-<!--        <FrameLayout-->
-<!--                android:id="@+id/frag_main_fl"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="match_parent" />-->
     </LinearLayout>
 
 
