--- a/app/src/main/res/layout/navigation_ssgsag.xml
+++ b/app/src/main/res/layout/navigation_ssgsag.xml
@@ -4,7 +4,7 @@
         android:layout_height="match_parent"
         xmlns:app="http://schemas.android.com/apk/res-auto">
     <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
@@ -31,26 +31,27 @@
                         android:fontFamily="@font/noto_sans_kr_medium"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
-                        android:letterSpacing="0.1" />
+                        android:letterSpacing="0.1"/>
             </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-            <View
-                    android:layout_width="1dp"
-                    android:layout_height="17dp"
-                    android:background="#dddddd"
-                    android:layout_gravity="center_vertical"
-                    />
 
             <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/navi_ssgsag_cl_ssgsag"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:paddingHorizontal="15dp">
+                    android:paddingRight="15dp">
+                <View
+                        android:id="@+id/navi_ssgsag_v"
+                        android:layout_width="1dp"
+                        android:layout_height="17dp"
+                        android:background="#dddddd"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        />
                 <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintStart_toEndOf="@+id/navi_ssgsag_v"
                         app:layout_constraintTop_toTopOf="parent"
                         android:text="추천"
                         android:textColor="@drawable/selector_text_color"
@@ -59,6 +60,7 @@
                         android:fontFamily="@font/noto_sans_kr_medium"
                         android:layout_centerVertical="true"
                         android:letterSpacing="0.1"
+                        android:layout_marginLeft="15dp"
                       />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </LinearLayout>
