--- a/app/src/main/res/layout/activity_ssgsag_filter.xml
+++ b/app/src/main/res/layout/activity_ssgsag_filter.xml
@@ -151,26 +151,27 @@
                             android:layout_height="wrap_content"
                             android:overScrollMode="never"
                             app:fastScrollEnabled="false"
-                            replaceAll="@{vm.jobFilter"/>
+                            replaceAll="@{vm.jobFilter"
+                            android:layout_marginBottom="80dp"/>
                 </LinearLayout>
                 </LinearLayout>
-                <RelativeLayout
-                        android:id="@+id/act_ssgsag_filter_rl_done"
-                        android:layout_width="match_parent"
-                        android:layout_height="56dp"
-                        android:layout_marginTop="80dp"
-                        android:background="@color/ssgsag">
-                    <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:fontFamily="@font/noto_sans_kr_medium"
-                            android:textSize="16sp"
-                            android:textColor="@color/white"
-                            android:text="맞춤정보 저장"
-                            android:layout_centerInParent="true"/>
-                </RelativeLayout>
+
             </LinearLayout>
         </androidx.core.widget.NestedScrollView>
+        <RelativeLayout
+                android:id="@+id/act_ssgsag_filter_rl_done"
+                android:layout_width="match_parent"
+                android:layout_height="56dp"
+                android:background="@color/ssgsag">
+            <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/noto_sans_kr_medium"
+                    android:textSize="16sp"
+                    android:textColor="@color/white"
+                    android:text="맞춤정보 저장"
+                    android:layout_centerInParent="true"/>
+        </RelativeLayout>
     </LinearLayout>
 </layout>
 
