--- a/app/src/main/res/layout/item_feed_best.xml
+++ b/app/src/main/res/layout/item_feed_best.xml
@@ -25,6 +25,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 tools:src="@drawable/img_poster"
+                android:scaleType="centerCrop"
                 glideTopCropBestImg="@{feed.feedPreviewImgUrl}"/>
     </androidx.cardview.widget.CardView>
 
