--- a/app/src/main/res/layout/activity_push_alarm.xml
+++ b/app/src/main/res/layout/activity_push_alarm.xml
@@ -73,7 +73,7 @@
             android:layout_marginHorizontal="24dp"
             android:layout_width="match_parent"
             android:layout_height="97dp"
-            android:visibility="gone">
+            android:visibility="visible">
         <LinearLayout
                 android:layout_marginVertical="24dp"
                 android:layout_width="wrap_content"
@@ -84,14 +84,16 @@
                     android:layout_marginBottom="2dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="19sp"
-                    android:textColor="#000000"
+                    android:textSize="14sp"
+                    android:fontFamily="@font/noto_sans_kr_bold"
+                    android:textColor="#444444"
                     android:letterSpacing="-0.02"
                     android:text="즐겨찾기 일정 마감 알림"/>
             <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="13sp"
+                    android:textSize="12sp"
+                    android:fontFamily="@font/noto_sans_kr_regular"
                     android:textColor="#888888"
                     android:letterSpacing="-0.02"
                     android:text="지원 마감 24시간 전, 잊지 않게 알려드려요"/>
