--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -98,117 +98,173 @@
 
         </RelativeLayout>
 
-        <androidx.recyclerview.widget.RecyclerView
-                android:visibility="visible"
-                android:layout_marginHorizontal="24dp"
-                android:id="@+id/frag_calendar_rv_sort"
-                app:layout_constraintTop_toBottomOf="@+id/frag_cal_rl_toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="25dp"
-                android:orientation="horizontal"
-                android:layout_marginTop="4dp"
-                android:layout_marginBottom="8dp"
-                android:background="@color/white"
-                app:replaceAll="@{vm.categorySort}"
-                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
-
         <LinearLayout
-                android:id="@+id/frag_calendar_ll_day_of_week"
-                android:layout_marginTop="8dp"
+                android:id="@+id/frag_calendar_cl_tab"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                app:layout_constraintTop_toBottomOf="@+id/frag_calendar_rv_sort">
-
-            <TextView
-                    android:gravity="center"
-                    android:layout_width="wrap_content"
+                android:layout_height="36dp"
+                app:layout_constraintTop_toBottomOf="@+id/frag_cal_rl_toolbar"
+                android:orientation="horizontal">
+            <LinearLayout
+                    android:id="@+id/frag_calendar_ll_all"
+                    android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:text="일"
-                    android:textSize="10sp"
-                    android:fontFamily="@font/noto_sans_kr_regular"
-                    android:textColor="@color/dayOfWeek"/>
-
-            <TextView
-                    android:gravity="center"
-                    android:layout_width="wrap_content"
+                    android:orientation="vertical">
+                <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="전체"
+                        android:fontFamily="@font/noto_sans_kr_medium"
+                        android:textSize="14sp"
+                        android:textColor="@color/ssgsag"
+                        android:layout_gravity="center"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        calendarFavoriteTabText="@{!vm.isFavorite()}"/>
+                <View
+                        android:layout_width="match_parent"
+                        android:layout_height="2dp"
+                        android:background="@color/ssgsag"
+                        calendarFavoriteTabView="@{!vm.isFavorite()}"/>
+            </LinearLayout>
+            <LinearLayout
+                    android:id="@+id/frag_calendar_ll_favorite"
+                    android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:text="월"
-                    android:textSize="10sp"
-                    android:fontFamily="@font/noto_sans_kr_regular"
-                    android:textColor="@color/dayOfWeek"/>
-
-            <TextView
-                    android:gravity="center"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:text="화"
-                    android:textSize="10sp"
-                    android:fontFamily="@font/noto_sans_kr_regular"
-                    android:textColor="@color/dayOfWeek"/>
-
-            <TextView
-                    android:gravity="center"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:text="수"
-                    android:textSize="10sp"
-                    android:fontFamily="@font/noto_sans_kr_regular"
-                    android:textColor="@color/dayOfWeek"/>
-
-            <TextView
-                    android:gravity="center"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:text="목"
-                    android:textSize="10sp"
-                    android:fontFamily="@font/noto_sans_kr_regular"
-                    android:textColor="@color/dayOfWeek"/>
-
-            <TextView
-                    android:gravity="center"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:text="금"
-                    android:textSize="10sp"
-                    android:fontFamily="@font/noto_sans_kr_regular"
-                    android:textColor="@color/dayOfWeek"/>
-
-            <TextView
-                    android:gravity="center"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:text="토"
-                    android:textSize="10sp"
-                    android:fontFamily="@font/noto_sans_kr_regular"
-                    android:textColor="@color/dayOfWeek"/>
-
+                    android:orientation="vertical">
+                <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="즐겨찾기"
+                        android:fontFamily="@font/noto_sans_kr_regular"
+                        android:textSize="14sp"
+                        android:textColor="@color/grey_2"
+                        android:layout_gravity="center"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        calendarFavoriteTabText="@{vm.isFavorite}"/>
+                <View
+                        android:layout_width="match_parent"
+                        android:layout_height="2dp"
+                        android:background="@color/grey_4"
+                        calendarFavoriteTabView="@{vm.isFavorite}"/>
+            </LinearLayout>
         </LinearLayout>
 
         <FrameLayout
                 android:id="@+id/frag_calendar_rl_page_container"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_marginTop="5dp"
                 android:background="@color/white"
-                app:layout_constraintTop_toBottomOf="@+id/frag_calendar_ll_day_of_week"
+                app:layout_constraintTop_toBottomOf="@+id/frag_calendar_cl_tab"
                 app:layout_constraintBottom_toBottomOf="parent">
 
-            <androidx.viewpager.widget.ViewPager
-                    android:background="@color/white"
-                    android:id="@+id/frag_calendar_vp_page"
+            <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:saveEnabled="false">
+                    android:layout_height="match_parent">
 
-            </androidx.viewpager.widget.ViewPager>
+                <LinearLayout
+                        android:id="@+id/frag_calendar_ll_day_of_week"
+                        android:layout_marginTop="8dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintStart_toStartOf="parent">
+
+                    <TextView
+                            android:gravity="center"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:text="일"
+                            android:textSize="10sp"
+                            android:fontFamily="@font/noto_sans_kr_regular"
+                            android:textColor="@color/grey_3"/>
+
+                    <TextView
+                            android:gravity="center"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:text="월"
+                            android:textSize="10sp"
+                            android:fontFamily="@font/noto_sans_kr_regular"
+                            android:textColor="@color/grey_3"/>
+
+                    <TextView
+                            android:gravity="center"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:text="화"
+                            android:textSize="10sp"
+                            android:fontFamily="@font/noto_sans_kr_regular"
+                            android:textColor="@color/grey_3"/>
+
+                    <TextView
+                            android:gravity="center"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:text="수"
+                            android:textSize="10sp"
+                            android:fontFamily="@font/noto_sans_kr_regular"
+                            android:textColor="@color/grey_3"/>
+
+                    <TextView
+                            android:gravity="center"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:text="목"
+                            android:textSize="10sp"
+                            android:fontFamily="@font/noto_sans_kr_regular"
+                            android:textColor="@color/grey_3"/>
+
+                    <TextView
+                            android:gravity="center"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:text="금"
+                            android:textSize="10sp"
+                            android:fontFamily="@font/noto_sans_kr_regular"
+                            android:textColor="@color/grey_3"/>
+
+                    <TextView
+                            android:gravity="center"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:text="토"
+                            android:textSize="10sp"
+                            android:fontFamily="@font/noto_sans_kr_regular"
+                            android:textColor="@color/grey_3"/>
+
+                </LinearLayout>
+
+                <View
+                        android:id="@+id/frag_calendar_v"
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:background="@color/grey_4"
+                        android:layout_marginTop="5dp"
+                        app:layout_constraintTop_toBottomOf="@+id/frag_calendar_ll_day_of_week" />
+
+                <androidx.viewpager.widget.ViewPager
+                        android:background="@color/white"
+                        android:id="@+id/frag_calendar_vp_page"
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
+                        android:saveEnabled="false"
+                        app:layout_constraintTop_toBottomOf="@id/frag_calendar_v"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent">
+
+                </androidx.viewpager.widget.ViewPager>
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
         </FrameLayout>
 
@@ -233,8 +289,6 @@
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintStart_toStartOf="parent"/>
             </androidx.constraintlayout.widget.ConstraintLayout>
-
-
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
