--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -33,6 +33,7 @@
 
             <TextView
                     tools:text="Day"
+                    android:text="@{vm.headerDate}"
                     android:layout_centerVertical="true"
                     android:id="@+id/frag_cal_tv_day"
                     android:layout_toRightOf="@+id/frag_cal_iv_drawer"
@@ -77,24 +78,6 @@
                     android:layout_marginRight="12dp"
                     android:layout_centerVertical="true"
                     />
-
-            <ImageView
-                    android:id="@+id/frag_cal_iv_list"
-                    android:layout_width="38dp"
-                    android:layout_height="38dp"
-                    android:src="@drawable/switch_to_list"
-                    android:layout_toLeftOf="@+id/frag_cal_iv_modify"
-                    android:layout_centerVertical="true"/>
-
-            <ImageView
-                    android:visibility="invisible"
-                    android:id="@+id/frag_cal_iv_calendar"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/switch_to_calendar"
-                    android:layout_toLeftOf="@+id/frag_cal_iv_modify"
-                    android:layout_centerVertical="true"/>
-
 
         </RelativeLayout>
 
@@ -153,120 +136,39 @@
         </LinearLayout>
 
         <FrameLayout
-                android:id="@+id/frag_calendar_rl_page_container"
+                android:id="@+id/frag_calendar_fl_page_container"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:background="@color/white"
                 app:layout_constraintTop_toBottomOf="@+id/frag_calendar_cl_tab"
                 app:layout_constraintBottom_toBottomOf="parent">
 
-            <androidx.constraintlayout.widget.ConstraintLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-
-                <LinearLayout
-                        android:id="@+id/frag_calendar_ll_day_of_week"
-                        android:layout_marginTop="8dp"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintStart_toStartOf="parent">
-
-                    <TextView
-                            android:gravity="center"
-                            android:layout_width="wrap_content"
-                            android:layout_height="match_parent"
-                            android:layout_weight="1"
-                            android:text="일"
-                            android:textSize="10sp"
-                            android:fontFamily="@font/noto_sans_kr_regular"
-                            android:textColor="@color/grey_3"/>
-
-                    <TextView
-                            android:gravity="center"
-                            android:layout_width="wrap_content"
-                            android:layout_height="match_parent"
-                            android:layout_weight="1"
-                            android:text="월"
-                            android:textSize="10sp"
-                            android:fontFamily="@font/noto_sans_kr_regular"
-                            android:textColor="@color/grey_3"/>
-
-                    <TextView
-                            android:gravity="center"
-                            android:layout_width="wrap_content"
-                            android:layout_height="match_parent"
-                            android:layout_weight="1"
-                            android:text="화"
-                            android:textSize="10sp"
-                            android:fontFamily="@font/noto_sans_kr_regular"
-                            android:textColor="@color/grey_3"/>
-
-                    <TextView
-                            android:gravity="center"
-                            android:layout_width="wrap_content"
-                            android:layout_height="match_parent"
-                            android:layout_weight="1"
-                            android:text="수"
-                            android:textSize="10sp"
-                            android:fontFamily="@font/noto_sans_kr_regular"
-                            android:textColor="@color/grey_3"/>
-
-                    <TextView
-                            android:gravity="center"
-                            android:layout_width="wrap_content"
-                            android:layout_height="match_parent"
-                            android:layout_weight="1"
-                            android:text="목"
-                            android:textSize="10sp"
-                            android:fontFamily="@font/noto_sans_kr_regular"
-                            android:textColor="@color/grey_3"/>
-
-                    <TextView
-                            android:gravity="center"
-                            android:layout_width="wrap_content"
-                            android:layout_height="match_parent"
-                            android:layout_weight="1"
-                            android:text="금"
-                            android:textSize="10sp"
-                            android:fontFamily="@font/noto_sans_kr_regular"
-                            android:textColor="@color/grey_3"/>
-
-                    <TextView
-                            android:gravity="center"
-                            android:layout_width="wrap_content"
-                            android:layout_height="match_parent"
-                            android:layout_weight="1"
-                            android:text="토"
-                            android:textSize="10sp"
-                            android:fontFamily="@font/noto_sans_kr_regular"
-                            android:textColor="@color/grey_3"/>
-
-                </LinearLayout>
-
-                <View
-                        android:id="@+id/frag_calendar_v"
-                        android:layout_width="match_parent"
-                        android:layout_height="1dp"
-                        android:background="@color/grey_4"
-                        android:layout_marginTop="5dp"
-                        app:layout_constraintTop_toBottomOf="@+id/frag_calendar_ll_day_of_week" />
-
-                <androidx.viewpager.widget.ViewPager
-                        android:background="@color/white"
-                        android:id="@+id/frag_calendar_vp_page"
-                        android:layout_width="match_parent"
-                        android:layout_height="0dp"
-                        android:saveEnabled="false"
-                        app:layout_constraintTop_toBottomOf="@id/frag_calendar_v"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintBottom_toBottomOf="parent">
-
-                </androidx.viewpager.widget.ViewPager>
-            </androidx.constraintlayout.widget.ConstraintLayout>
 
         </FrameLayout>
+
+        <androidx.cardview.widget.CardView
+                android:id="@+id/frag_Calendar_cv_toggle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:cardBackgroundColor="@color/ssgsag"
+                app:cardCornerRadius="8dp"
+                app:contentPaddingLeft="16dp"
+                app:contentPaddingRight="16dp"
+                app:contentPaddingTop="9dp"
+                app:contentPaddingBottom="9dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginBottom="28dp">
+            <TextView
+                    android:id="@+id/frag_calendar_tv_toggle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="캘린더로 보기"
+                    android:textColor="@color/white"
+                    android:fontFamily="@font/noto_sans_kr_medium"
+                    android:textSize="12sp"/>
+       </androidx.cardview.widget.CardView>
 
         <androidx.constraintlayout.widget.ConstraintLayout
                 android:visibility="gone"
