--- a/app/src/main/res/layout/fragment_calendar_list.xml
+++ b/app/src/main/res/layout/fragment_calendar_list.xml
@@ -6,28 +6,16 @@
                 name="vm"
                 type="com.icoo.ssgsag_android.ui.main.calendar.CalendarViewModel"/>
     </data>
-
-    <!--
-    <androidx.core.widget.NestedScrollView
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:tools="http://schemas.android.com/tools"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginBottom="48dp"
-            android:background="@color/white">-->
         <RelativeLayout
                 xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginBottom="@dimen/main_navi_height"
-                android:background="@color/white">
+                android:background="@color/bg_gray">
 
             <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/frag_calendar_list_page_rv"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginTop="10dp"/>
+                    android:layout_height="match_parent"/>
 
             <ProgressBar
                     android:visibility="@{vm.isProgress}"
@@ -36,7 +24,5 @@
                     android:layout_centerInParent="true"/>
 
         </RelativeLayout>
-
-    <!--</androidx.core.widget.NestedScrollView>-->
 
 </layout>
