--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -135,7 +135,7 @@
             </LinearLayout>
         </LinearLayout>
 
-        <FrameLayout
+        <RelativeLayout
                 android:id="@+id/frag_calendar_fl_page_container"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
@@ -144,7 +144,7 @@
                 app:layout_constraintBottom_toBottomOf="parent">
 
 
-        </FrameLayout>
+        </RelativeLayout>
 
         <androidx.cardview.widget.CardView
                 android:id="@+id/frag_Calendar_cv_toggle"
