--- a/app/src/main/res/layout/fragment_calendar_list.xml
+++ b/app/src/main/res/layout/fragment_calendar_list.xml
@@ -1,28 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:app="http://schemas.android.com/apk/res-auto">
-
     <data>
         <variable
                 name="vm"
-                type="com.icoo.ssgsag_android.ui.main.calendar.CalendarViewModel"/>
+                type="com.icoo.ssgsag_android.ui.main.calendar.CalendarViewModel" />
     </data>
-        <RelativeLayout
-                xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@color/bg_gray">
 
-            <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/frag_calendar_list_page_rv"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"/>
+<androidx.constraintlayout.widget.ConstraintLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/white">
 
-            <ProgressBar
-                    android:visibility="@{vm.isProgress}"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"/>
+    <com.google.android.material.tabs.TabLayout
+            android:id="@+id/frag_cal_list_tl"
+            android:layout_width="match_parent"
+            android:layout_height="36dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:tabSelectedTextColor="@color/ssgsag"
+            app:tabTextColor="@color/grey_2"
+            app:tabIndicatorColor="@color/ssgsag"
+            app:tabIndicatorHeight="2dp"
+            app:tabMode="fixed"
+            app:tabGravity="fill"/>
 
-        </RelativeLayout>
+    <androidx.viewpager.widget.ViewPager
+            android:id="@+id/frag_cal_list_vp"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toBottomOf="@+id/frag_cal_list_tl"
+            app:layout_constraintBottom_toBottomOf="parent"/>
 
+</androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
