--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -32,6 +32,7 @@
                     android:src="@drawable/profile"/>
 
             <TextView
+                    android:visibility="gone"
                     tools:text="Day"
                     android:text="@{vm.headerDate}"
                     android:layout_centerVertical="true"
@@ -46,6 +47,15 @@
                     android:letterSpacing="-0.02"
                     android:lineSpacingExtra="8sp"/>
 
+            <TextView
+                    android:id="@+id/frag_cal_tv_header"
+                    android:text="마이 캘린더"
+                    android:layout_centerInParent="true"
+                    android:fontFamily="@font/noto_sans_kr_bold"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="16sp"
+                    android:textColor="@color/black_2" />
 
             <ImageView
                     android:id="@+id/frag_cal_iv_modify"
@@ -55,92 +65,15 @@
                     android:layout_alignParentRight="true"
                     android:layout_marginRight="2dp"
                     android:layout_centerVertical="true"/>
-            <ImageView
-                    android:visibility="gone"
-                    android:id="@+id/frag_cal_iv_delete_back"
-                    android:layout_width="38dp"
-                    android:layout_height="38dp"
-                    android:src="@drawable/back_cal"
-                    android:layout_alignParentRight="true"
-                    android:layout_marginRight="2dp"
-                    android:layout_centerVertical="true"
-                    />
-            <TextView
-                    android:visibility="gone"
-                    android:id="@+id/frag_cal_tv_delete"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="삭제"
-                    android:textSize="14sp"
-                    android:textColor="#656ef0"
-                    android:fontFamily="@font/noto_sans_kr_regular"
-                    android:layout_alignParentRight="true"
-                    android:layout_marginRight="12dp"
-                    android:layout_centerVertical="true"
-                    />
 
         </RelativeLayout>
-
-        <LinearLayout
-                android:id="@+id/frag_calendar_cl_tab"
-                android:layout_width="match_parent"
-                android:layout_height="36dp"
-                app:layout_constraintTop_toBottomOf="@+id/frag_cal_rl_toolbar"
-                android:orientation="horizontal">
-            <LinearLayout
-                    android:id="@+id/frag_calendar_ll_all"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:orientation="vertical">
-                <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="전체"
-                        android:fontFamily="@font/noto_sans_kr_medium"
-                        android:textSize="14sp"
-                        android:textColor="@color/ssgsag"
-                        android:layout_gravity="center"
-                        android:layout_weight="1"
-                        android:gravity="center"
-                        calendarFavoriteTabText="@{!vm.isFavorite()}"/>
-                <View
-                        android:layout_width="match_parent"
-                        android:layout_height="2dp"
-                        android:background="@color/ssgsag"
-                        calendarFavoriteTabView="@{!vm.isFavorite()}"/>
-            </LinearLayout>
-            <LinearLayout
-                    android:id="@+id/frag_calendar_ll_favorite"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:orientation="vertical">
-                <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="즐겨찾기"
-                        android:fontFamily="@font/noto_sans_kr_regular"
-                        android:textSize="14sp"
-                        android:textColor="@color/grey_2"
-                        android:layout_gravity="center"
-                        android:layout_weight="1"
-                        android:gravity="center"
-                        calendarFavoriteTabText="@{vm.isFavorite}"/>
-                <View
-                        android:layout_width="match_parent"
-                        android:layout_height="2dp"
-                        android:background="@color/grey_4"
-                        calendarFavoriteTabView="@{vm.isFavorite}"/>
-            </LinearLayout>
-        </LinearLayout>
 
         <RelativeLayout
                 android:id="@+id/frag_calendar_fl_page_container"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:background="@color/white"
-                app:layout_constraintTop_toBottomOf="@+id/frag_calendar_cl_tab"
+                app:layout_constraintTop_toBottomOf="@+id/frag_cal_rl_toolbar"
                 app:layout_constraintBottom_toBottomOf="parent">
 
 
