--- a/app/src/main/res/layout/fragment_calendar_grid.xml
+++ b/app/src/main/res/layout/fragment_calendar_grid.xml
@@ -13,13 +13,77 @@
         android:background="@color/white"
         xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <LinearLayout
+            android:id="@+id/frag_cal_grid_ll_tab"
+            android:layout_width="match_parent"
+            android:layout_height="36dp"
+            app:layout_constraintTop_toTopOf="parent"
+            android:orientation="horizontal">
+        <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/frag_cal_grid_ll_all"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:orientation="vertical">
+            <TextView
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:text="전체"
+                    android:textSize="14sp"
+                    android:textColor="@color/ssgsag"
+                    android:layout_gravity="center"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    calendarFavoriteTabText="@{!vm.isFavorite()}"/>
+            <View
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:layout_width="match_parent"
+                    android:layout_height="2dp"
+                    android:background="@color/ssgsag"
+                    calendarFavoriteTabView="@{!vm.isFavorite()}"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+        <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/frag_cal_grid_ll_favorite"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:orientation="vertical">
+            <TextView
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:text="즐겨찾기"
+                    android:textSize="14sp"
+                    android:textColor="@color/grey_2"
+                    android:layout_gravity="center"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    calendarFavoriteTabText="@{vm.isFavorite}"/>
+            <View
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:layout_width="match_parent"
+                    android:layout_height="2dp"
+                    android:background="@color/grey_4"
+                    calendarFavoriteTabView="@{vm.isFavorite}"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </LinearLayout>
+
         <LinearLayout
                 android:id="@+id/frag_cal_grid_ll_day_of_week"
                 android:layout_marginTop="8dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/frag_cal_grid_ll_tab"
                 app:layout_constraintStart_toStartOf="parent">
 
             <TextView
