--- a/app/src/main/res/layout/item_calendar_date.xml
+++ b/app/src/main/res/layout/item_calendar_date.xml
@@ -6,6 +6,10 @@
         <variable
                 name="date"
                 type="com.icoo.ssgsag_android.data.model.date.Date"/>
+
+        <variable
+                name="vm"
+                type="com.icoo.ssgsag_android.ui.main.calendar.CalendarViewModel" />
     </data>
 
     <RelativeLayout
@@ -281,286 +285,3 @@
 
     </RelativeLayout>
 </layout>
-
-
-        <!--<?xml version="1.0" encoding="utf-8"?>-->
-        <!--<layout xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto">-->
-
-        <!--<data>-->
-        <!--<variable-->
-        <!--clubName="date"-->
-        <!--type="com.ssgsag.data.model.date.Date"/>-->
-        <!--</data>-->
-
-        <!--<LinearLayout-->
-        <!--xmlns:android="http://schemas.android.com/apk/res/android"-->
-        <!--android:id="@+id/item_date_ll_view"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:orientation="vertical"-->
-        <!--android:gravity="center">-->
-
-        <!--<View android:layout_width="match_parent" android:layout_height="1dp"-->
-        <!--android:background="#eeeeee"-->
-        <!--android:layout_marginBottom="2dp"/>-->
-
-        <!--<TextView-->
-        <!--tools:text="day"-->
-        <!--android:id="@+id/item_date_tv_day"-->
-        <!--android:layout_marginBottom="2dp"-->
-        <!--android:layout_width="24dp"-->
-        <!--android:layout_height="24dp"-->
-        <!--android:gravity="center"-->
-        <!--android:textColor="@color/activeMonth"-->
-        <!--app:calendar_date="@{date}"/>-->
-
-        <!--<LinearLayout-->
-        <!--android:layout_marginBottom="12dp"-->
-        <!--android:layout_marginHorizontal="2dp"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent"-->
-        <!--android:orientation="vertical">-->
-
-        <!--<androidx.cardview.widget.CardView-->
-        <!--app:date="@{date}"-->
-        <!--app:position="@{0}"-->
-        <!--android:visibility="gone"-->
-        <!--android:id="@+id/item_date_cv_schedule_1"-->
-        <!--android:layout_marginBottom="1dp"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="13dp"-->
-        <!--app:cardElevation="0dp"-->
-        <!--app:cardCornerRadius="2dp"-->
-        <!--app:cardBackgroundColor="@color/contest">-->
-
-        <!--<TextView-->
-        <!--android:layout_marginStart="3dp"-->
-        <!--tools:text="월별공모"-->
-        <!--app:date="@{date}"-->
-        <!--app:position="@{0}"-->
-        <!--android:fontFamily="@font/noto_sans_kr_regular"-->
-        <!--android:gravity="center_vertical"-->
-        <!--android:id="@+id/item_date_tv_schedule_1_text"-->
-        <!--android:textColor="@color/white"-->
-        <!--android:textSize="8sp"-->
-        <!--android:maxLines="1"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="match_parent"/>-->
-
-        <!--</androidx.cardview.widget.CardView>-->
-
-        <!--<androidx.cardview.widget.CardView-->
-        <!--app:date="@{date}"-->
-        <!--app:position="@{1}"-->
-        <!--android:visibility="gone"-->
-        <!--android:id="@+id/item_date_cv_schedule_2"-->
-        <!--android:layout_marginBottom="1dp"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="13dp"-->
-        <!--app:cardElevation="0dp"-->
-        <!--app:cardCornerRadius="2dp"-->
-        <!--app:cardBackgroundColor="@color/contest">-->
-
-        <!--<TextView-->
-        <!--android:layout_marginStart="3dp"-->
-        <!--tools:text="월별공모"-->
-        <!--app:date="@{date}"-->
-        <!--app:position="@{1}"-->
-        <!--android:fontFamily="@font/noto_sans_kr_regular"-->
-        <!--android:gravity="center_vertical"-->
-        <!--android:id="@+id/item_date_tv_schedule_2_text"-->
-        <!--android:textColor="@color/white"-->
-        <!--android:textSize="8sp"-->
-        <!--android:maxLines="1"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="match_parent"/>-->
-
-        <!--</androidx.cardview.widget.CardView>-->
-
-        <!--<androidx.cardview.widget.CardView-->
-        <!--app:date="@{date}"-->
-        <!--app:position="@{2}"-->
-        <!--android:visibility="gone"-->
-        <!--android:id="@+id/item_date_cv_schedule_3"-->
-        <!--android:layout_marginBottom="1dp"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="13dp"-->
-        <!--app:cardElevation="0dp"-->
-        <!--app:cardCornerRadius="2dp"-->
-        <!--app:cardBackgroundColor="@color/contest">-->
-
-        <!--<TextView-->
-        <!--android:layout_marginStart="3dp"-->
-        <!--tools:text="월별공모"-->
-        <!--app:date="@{date}"-->
-        <!--app:position="@{2}"-->
-        <!--android:fontFamily="@font/noto_sans_kr_regular"-->
-        <!--android:gravity="center_vertical"-->
-        <!--android:id="@+id/item_date_tv_schedule_3_text"-->
-        <!--android:textColor="@color/white"-->
-        <!--android:textSize="8sp"-->
-        <!--android:maxLines="1"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="match_parent"/>-->
-
-        <!--</androidx.cardview.widget.CardView>-->
-
-        <!--<androidx.cardview.widget.CardView-->
-        <!--app:date="@{date}"-->
-        <!--app:position="@{4}"-->
-        <!--android:visibility="gone"-->
-        <!--android:layout_marginBottom="1dp"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="13dp"-->
-        <!--app:cardElevation="0dp"-->
-        <!--app:cardCornerRadius="2dp"-->
-        <!--app:cardBackgroundColor="@color/contest">-->
-
-        <!--<TextView-->
-        <!--android:layout_marginStart="3dp"-->
-        <!--tools:text="월별공모"-->
-        <!--app:date="@{date}"-->
-        <!--app:position="@{4}"-->
-        <!--android:fontFamily="@font/noto_sans_kr_regular"-->
-        <!--android:gravity="center_vertical"-->
-        <!--android:textColor="@color/white"-->
-        <!--android:textSize="8sp"-->
-        <!--android:maxLines="1"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="match_parent"/>-->
-
-        <!--</androidx.cardview.widget.CardView>-->
-
-        <!--<androidx.cardview.widget.CardView-->
-        <!--app:date="@{date}"-->
-        <!--app:position="@{5}"-->
-        <!--android:visibility="gone"-->
-        <!--android:layout_marginBottom="1dp"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="13dp"-->
-        <!--app:cardElevation="0dp"-->
-        <!--app:cardCornerRadius="2dp"-->
-        <!--app:cardBackgroundColor="@color/contest">-->
-
-        <!--<TextView-->
-        <!--android:layout_marginStart="3dp"-->
-        <!--tools:text="월별공모"-->
-        <!--app:date="@{date}"-->
-        <!--app:position="@{5}"-->
-        <!--android:fontFamily="@font/noto_sans_kr_regular"-->
-        <!--android:gravity="center_vertical"-->
-        <!--android:textColor="@color/white"-->
-        <!--android:textSize="8sp"-->
-        <!--android:maxLines="1"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="match_parent"/>-->
-
-        <!--</androidx.cardview.widget.CardView>-->
-
-        <!--<androidx.cardview.widget.CardView-->
-        <!--app:date="@{date}"-->
-        <!--app:position="@{6}"-->
-        <!--android:visibility="gone"-->
-        <!--android:layout_marginBottom="1dp"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="13dp"-->
-        <!--app:cardElevation="0dp"-->
-        <!--app:cardCornerRadius="2dp"-->
-        <!--app:cardBackgroundColor="@color/contest">-->
-
-        <!--<TextView-->
-        <!--android:layout_marginStart="3dp"-->
-        <!--tools:text="월별공모"-->
-        <!--app:date="@{date}"-->
-        <!--app:position="@{6}"-->
-        <!--android:fontFamily="@font/noto_sans_kr_regular"-->
-        <!--android:gravity="center_vertical"-->
-        <!--android:textColor="@color/white"-->
-        <!--android:textSize="8sp"-->
-        <!--android:maxLines="1"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="match_parent"/>-->
-
-        <!--</androidx.cardview.widget.CardView>-->
-
-        <!--<androidx.cardview.widget.CardView-->
-        <!--app:date="@{date}"-->
-        <!--app:position="@{7}"-->
-        <!--android:visibility="gone"-->
-        <!--android:layout_marginBottom="1dp"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="13dp"-->
-        <!--app:cardElevation="0dp"-->
-        <!--app:cardCornerRadius="2dp"-->
-        <!--app:cardBackgroundColor="@color/contest">-->
-
-        <!--<TextView-->
-        <!--android:layout_marginStart="3dp"-->
-        <!--tools:text="월별공모"-->
-        <!--app:date="@{date}"-->
-        <!--app:position="@{7}"-->
-        <!--android:fontFamily="@font/noto_sans_kr_regular"-->
-        <!--android:gravity="center_vertical"-->
-        <!--android:textColor="@color/white"-->
-        <!--android:textSize="8sp"-->
-        <!--android:maxLines="1"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="match_parent"/>-->
-
-        <!--</androidx.cardview.widget.CardView>-->
-
-        <!--<androidx.cardview.widget.CardView-->
-        <!--app:date="@{date}"-->
-        <!--app:position="@{8}"-->
-        <!--android:visibility="gone"-->
-        <!--android:layout_marginBottom="1dp"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="13dp"-->
-        <!--app:cardElevation="0dp"-->
-        <!--app:cardCornerRadius="2dp"-->
-        <!--app:cardBackgroundColor="@color/contest">-->
-
-        <!--<TextView-->
-        <!--android:layout_marginStart="3dp"-->
-        <!--tools:text="월별공모"-->
-        <!--app:date="@{date}"-->
-        <!--app:position="@{8}"-->
-        <!--android:fontFamily="@font/noto_sans_kr_regular"-->
-        <!--android:gravity="center_vertical"-->
-        <!--android:textColor="@color/white"-->
-        <!--android:textSize="8sp"-->
-        <!--android:maxLines="1"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="match_parent"/>-->
-
-        <!--</androidx.cardview.widget.CardView>-->
-
-        <!--<androidx.cardview.widget.CardView-->
-        <!--app:date="@{date}"-->
-        <!--app:position="@{9}"-->
-        <!--android:visibility="gone"-->
-        <!--android:layout_marginBottom="1dp"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="13dp"-->
-        <!--app:cardElevation="0dp"-->
-        <!--app:cardCornerRadius="2dp"-->
-        <!--app:cardBackgroundColor="@color/contest">-->
-
-        <!--<TextView-->
-        <!--android:layout_marginStart="3dp"-->
-        <!--tools:text="월별공모"-->
-        <!--app:date="@{date}"-->
-        <!--app:position="@{9}"-->
-        <!--android:fontFamily="@font/noto_sans_kr_regular"-->
-        <!--android:gravity="center_vertical"-->
-        <!--android:textColor="@color/white"-->
-        <!--android:textSize="8sp"-->
-        <!--android:maxLines="1"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="match_parent"/>-->
-
-        <!--</androidx.cardview.widget.CardView>-->
-
-        <!--</LinearLayout>-->
-        <!--</LinearLayout>-->
-        <!--</layout>-->
