--- a/app/src/main/res/layout/item_calendar_list.xml
+++ b/app/src/main/res/layout/item_calendar_list.xml
@@ -16,13 +16,14 @@
             android:background="@color/white">
 
         <RelativeLayout
+                android:visibility="gone"
                 android:id="@+id/item_calendar_list_rl_date"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
                 android:layout_marginBottom="8dp"
-                android:layout_marginLeft="24dp"
-                dateLine = "@{schedule.isAlone()}">
+                android:layout_marginLeft="24dp">
+<!--                dateLine = "@{schedule.isAlone()}">-->
             <TextView
                     android:id="@+id/item_calendar_list_tv_date"
                     android:layout_width="wrap_content"
@@ -47,7 +48,7 @@
                     <androidx.cardview.widget.CardView
                             android:id="@+id/item_all_posters_cv_poster_image"
                             android:layout_width="58dp"
-                            android:layout_height="75dp"
+                            android:layout_height="74dp"
                             app:cardCornerRadius="3dp"
                             app:cardElevation="0dp"
                             android:layout_marginVertical="10dp"
@@ -117,7 +118,7 @@
                             <androidx.cardview.widget.CardView
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    app:cardBackgroundColor="#14656ef0"
+                                    app:cardBackgroundColor="#26656ef0"
                                     app:cardCornerRadius="3dp"
                                     app:cardElevation="0dp"
                                     app:contentPaddingLeft="2dp"
@@ -131,16 +132,21 @@
                                         android:fontFamily="@font/noto_sans_kr_regular"
                                         android:includeFontPadding="false"
                                         android:textAlignment="center"
-                                        android:textColor="#656ef0"
+                                        android:textColor="@color/ssgsag"
                                         android:textSize="10sp" />
                             </androidx.cardview.widget.CardView>
 
-                            <ImageView
+                            <TextView
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_gravity="center_vertical"
                                     android:layout_marginLeft="4dp"
-                                    android:src="@drawable/calendar_count" />
+                                    android:text="저장"
+                                    android:fontFamily="@font/noto_sans_kr_regular"
+                                    android:includeFontPadding="false"
+                                    android:lineHeight="10sp"
+                                    android:textColor="@color/grey_2"
+                                    android:textSize="10sp"/>
 
                             <TextView
                                     scheduleLikeNum="@{schedule.likeNum}"
@@ -151,7 +157,7 @@
                                     android:fontFamily="@font/noto_sans_kr_regular"
                                     android:includeFontPadding="false"
                                     android:lineHeight="10sp"
-                                    android:textColor="#aaaaaa"
+                                    android:textColor="@color/grey_2"
                                     android:textSize="10sp" />
                         </LinearLayout>
 
@@ -177,7 +183,7 @@
                             android:layout_height="match_parent"
                             android:layout_width="74dp"
                             android:layout_gravity="center_vertical|end"
-                            android:src="@drawable/favorite_passive"
+                            android:src="@drawable/ic_favorite"
                             android:scaleType="center"
                             android:layout_alignParentRight="true"
                             bookmarkBtnImgInDialog="@{schedule.isFavorite()}"
@@ -187,7 +193,7 @@
                             android:visibility="gone"
                             android:id="@+id/item_calendar_list_iv_selector"
                             android:layout_height="match_parent"
-                            android:layout_width="55dp"
+                            android:layout_width="74dp"
                             android:layout_gravity="center_vertical|end"
                             android:src="@drawable/selector_edit_schedule"
                             android:scaleType="center"
