--- a/app/src/main/res/menu/menu_cal_grid.xml
+++ b/app/src/main/res/menu/menu_cal_grid.xml
@@ -4,7 +4,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-            android:title = "삭제"
-            android:id="@+id/menu_cal_list_delete"
-            app:showAsAction="ifRoom"/>
+        android:title="캘린더 공유"
+        android:id="@+id/menu_cal_list_share"
+        app:showAsAction="ifRoom"/>
 </menu>
