--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -49,7 +49,7 @@
 
             <TextView
                     android:id="@+id/frag_cal_tv_header"
-                    android:text="마이 캘린더"
+                    android:text="캘린더"
                     android:layout_centerInParent="true"
                     android:fontFamily="@font/noto_sans_kr_bold"
                     android:layout_width="wrap_content"
