--- a/app/src/main/res/layout/fragment_calendar_list_page.xml
+++ b/app/src/main/res/layout/fragment_calendar_list_page.xml
@@ -6,22 +6,100 @@
                 name="vm"
                 type="com.icoo.ssgsag_android.ui.main.calendar.CalendarViewModel"/>
     </data>
-        <RelativeLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
                 xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:background="@color/white">
+
+            <LinearLayout
+                    android:id="@+id/frag_cal_list_page_ll_filter"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginTop="12dp"
+                    android:layout_marginLeft="20dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+                <androidx.cardview.widget.CardView
+                        android:id="@+id/frag_cal_list_page_cv_last_save"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:cardCornerRadius="4dp"
+                        selectedBgSsgsag="@{vm.isLastSaveFilter}"
+                        app:cardElevation="0dp">
+                    <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal"
+                            android:layout_marginVertical="2dp"
+                            android:layout_marginHorizontal="6dp">
+                        <ImageView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content" />
+                        <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="최근 저장 순"
+                                android:textColor="@color/grey_1"
+                                android:textSize="12sp"
+                                android:fontFamily="@font/noto_sans_kr_regular"
+                                android:includeFontPadding="false"
+                                selectedTextSsgsag="@{vm.isLastSaveFilter}"/>
+                    </LinearLayout>
+                </androidx.cardview.widget.CardView>
+
+                <androidx.cardview.widget.CardView
+                        android:id="@+id/frag_cal_list_page_cv_deadline"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="8dp"
+                        app:cardCornerRadius="4dp"
+                        selectedBgSsgsag="@{!vm.isLastSaveFilter}"
+                        app:cardElevation="0dp">
+                    <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal"
+                            android:layout_marginVertical="2dp"
+                            android:layout_marginHorizontal="6dp">
+                        <ImageView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content" />
+                        <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="마감 순"
+                                android:textColor="@color/grey_1"
+                                android:textSize="12sp"
+                                android:fontFamily="@font/noto_sans_kr_regular"
+                                android:includeFontPadding="false"
+                                selectedTextSsgsag="@{!vm.isLastSaveFilter}"/>
+                    </LinearLayout>
+                </androidx.cardview.widget.CardView>
+
+
+            </LinearLayout>
 
             <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/frag_calendar_list_page_rv"
+                    android:layout_marginTop="8dp"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"/>
+                    android:layout_height="wrap_content"
+                    android:paddingBottom="100dp"
+                    android:clipToPadding="false"
+                    app:layout_constraintTop_toBottomOf="@+id/frag_cal_list_page_ll_filter"
+                    android:background="@color/white"/>
 
             <ProgressBar
                     android:visibility="@{vm.isProgress}"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"/>
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"/>
 
-        </RelativeLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
 </layout>
