--- a/app/src/main/res/layout/item_calendar_list.xml
+++ b/app/src/main/res/layout/item_calendar_list.xml
@@ -118,7 +118,7 @@
                             <androidx.cardview.widget.CardView
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    app:cardBackgroundColor="@color/white"
+                                    app:cardBackgroundColor="@color/ssgsag8"
                                     app:cardCornerRadius="3dp"
                                     app:cardElevation="0dp"
                                     app:contentPaddingLeft="2dp"
@@ -132,7 +132,7 @@
                                         android:fontFamily="@font/noto_sans_kr_regular"
                                         android:includeFontPadding="false"
                                         android:textAlignment="center"
-                                        android:textColor="@color/ssgsag"
+                                        android:textColor="#656ef0"
                                         android:textSize="10sp" />
                             </androidx.cardview.widget.CardView>
 
