--- a/app/src/main/res/layout/activity_calendar_detail.xml
+++ b/app/src/main/res/layout/activity_calendar_detail.xml
@@ -1058,6 +1058,7 @@
                     android:gravity="center_vertical">
 
             <ImageView
+                    android:id="@+id/act_cal_detail_iv_apply"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:src="@drawable/ic_apply_rightnow"
