--- a/app/src/main/res/layout/item_dialog_plus_push_alarm.xml
+++ b/app/src/main/res/layout/item_dialog_plus_push_alarm.xml
@@ -25,11 +25,9 @@
                 android:layout_height="0dp"
                 android:layout_weight="1"/>
 
-        <CheckBox
-                android:id="@+id/checkbox"
+        <ImageView
+                android:id="@+id/image_view"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/cb_selector_f2c801"
-                android:button="@color/white"
                 android:layout_gravity="center_vertical"/>
     </LinearLayout>
