--- a/app/src/main/res/layout/item_poster_bookmark.xml
+++ b/app/src/main/res/layout/item_poster_bookmark.xml
@@ -11,7 +11,8 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent" 
         android:layout_height="55dp"
-        android:background="@color/white">
+        android:background="@color/white"
+        android:paddingHorizontal="40dp">
     <TextView
             android:id="@+id/item_poster_bookmark_tv"
             android:layout_width="wrap_content"
