[SSGSAG-56] 캘린더 삭제하기 화면
1. 취소 버튼 누른 후에 다시 일정 삭제 버튼 누르면 다이얼 로그 뷰 갱신 안되는 문제
2. 캘린더 리스트 / 그리드에서 캘린더 삭제하는 logic 전체적으로 수정

--- a/app/src/main/res/layout/item_calendar_list.xml
+++ b/app/src/main/res/layout/item_calendar_list.xml
@@ -184,19 +184,18 @@
                             android:layout_gravity="center_vertical|end"
                             android:src="@drawable/ic_favorite"
                             android:scaleType="center"
-                            android:layout_alignParentRight="true"
                             bookmarkBtnImgInDialog="@{schedule.isFavorite()}"
                             favoriteVisibility="@{schedule.selectType}"/>
 
                     <ImageView
                             android:visibility="gone"
+                            tools:visibility="visible"
                             android:id="@+id/item_calendar_list_iv_selector"
                             android:layout_height="match_parent"
                             android:layout_width="74dp"
                             android:layout_gravity="center_vertical|end"
-                            android:src="@drawable/selector_edit_schedule"
+                            android:src="@drawable/ic_select_all_passive"
                             android:scaleType="center"
-                            android:layout_alignParentRight="true"
                             selectorVisibility="@{schedule.selectType}"/>
 
                 </LinearLayout>
